# GalaxyExplorers

backend/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
backend/.github/: PULL_REQUEST_TEMPLATE.md
backend/.github/ISSUE_TEMPLATE/: question.md
backend/.github/workflows/: prod-deploy.yml  test.yml
backend/app/: initial_data.py  main.py  models.py  tests_pre_start.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: login.py  users.py  utils.py
backend/app/api/routes/v0/: root.py  schema.py
backend/app/core/: config.py  db.py  security.py
backend/app/services/: email_service.py
backend/app/services/img_gen_service/: __init__.py  fal.py  leonardo.py  replicate.py
backend/app/services/llm_service/: __init__.py  chat.py  prompt.py
backend/app/services/story_service/: __init__.py  core.py  prompt.py
backend/app/utils/: __init__.py  cache.py  logger.py  singleton.py
backend/docker/: README.md
backend/examples/: generate-image.ipynb  generate-story.ipynb  generate-voice.ipynb  keywords.py
backend/migrations/: env.py
backend/migrations/versions/: 571ea3a02609_add_create_at_field_to_user.py  d607582ec5c1_change_update_at_field_for_user.py
backend/scripts/: commons.sh
backend/scripts/prod/: install.sh  shutdown.sh  start.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_items.py  test_login.py  test_users.py
backend/tests/crud/: test_user.py
backend/tests/scripts/: test_backend_pre_start.py
backend/tests/utils/: item.py  user.py  utils.py
frontend/: .eslintrc.js  .gitignore  Makefile  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/.github/workflows/: deploy.yml  lint.yml
frontend/docs/Devlopment/: Fold-Structure.zh-CN.md
frontend/scripts/: commons.sh
frontend/scripts/prod/: install.sh  shutdown.sh  start.sh
frontend/src/app/: StoreProvider.tsx  layout.tsx  metadata.ts  page.tsx
frontend/src/app/chatroom/[name]/: page.tsx
frontend/src/app/draw/: draw.css  layout.tsx  page.tsx
frontend/src/app/home/: Loading.tsx  Redirect.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/login/role/: page.tsx
frontend/src/app/overview/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/select/: page.tsx
frontend/src/app/welcome/: page.tsx
frontend/src/components/: Chatbox.tsx
frontend/src/components/painter/: DraftCanvas.tsx  GenSpin.tsx  GenerateButton.tsx  LiveImageShapeUtil.tsx  LiveImageTool.tsx  PaintingPreview.tsx  PrompInputField.tsx  PromptLego.tsx  SneakySideEffects.tsx  TitleInputModal.tsx
frontend/src/components/painter/lego/: CenterContent.tsx  ChoiceLego.tsx  Choices.tsx  CurrentLego.tsx  LeftSider.tsx  Lego.tsx  LegoInputBox.tsx  Navigator.tsx  NavigatorLego.tsx  RightSider.tsx  TextArea.tsx
frontend/src/components/painter/lego/data/: DataType.ts  data.tsx
frontend/src/components/painter/lego/hooks/: useClickPreventionOnDoubleClick.tsx
frontend/src/constant/: url.ts
frontend/src/lib/: openai.ts  types.ts
frontend/src/store/: ContentSlice.ts  store.ts
frontend/src/store/user/: UserSlice.ts
frontend/src/styles/: chatbox.css
frontend/src/utils/: blob.ts  debounce.ts  lego.ts
